# ipad_pricer

./: .gitignore  README.md  pyproject.toml
ipad_pricer/: __main__.py  product.py
