[tool.poetry]
name = "ipad-pricer"
version = "0.1.0"
description = ""
authors = ["Anargyros Akrivos <argy@akrivos.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
